--- a/Regresión/Regresion_Lineal_Multiple.ipynb
+++ b/Regresión/Regresion_Lineal_Multiple.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPPbuWiuPmfcpFkjAcHX6GU",
+      "authorship_tag": "ABX9TyM6fHLY/nkWfAKHRk8C5TyC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -135,10 +135,12 @@
       },
       "source": [
         "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+        "from sklearn.compose import ColumnTransformer\n",
+        "\n",
         "labelencoder= LabelEncoder()\n",
         "x[:,3] = labelencoder.fit_transform(x[:,3])\n",
-        "onehotencod = OneHotEncoder(categories='auto',sparse='true')\n",
-        "x = onehotencod.fit_transform(x).toarray()"
+        "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[3])],remainder='passthrough')\n",
+        "x=np.array(ct.fit_transform(x),dtype=np.int)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -152,73 +154,73 @@
           "base_uri": "https://localhost:8080/",
           "height": 867
         },
-        "outputId": "812ea7f3-9935-4b13-9ed8-750c66b15eaf"
+        "outputId": "7f7d9753-91e4-4536-a98b-57e0a11ef7e3"
       },
       "source": [
         "x"
       ],
-      "execution_count": 40,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[165349.2, 136897.8, 471784.1, 'New York'],\n",
-              "       [162597.7, 151377.59, 443898.53, 'California'],\n",
-              "       [153441.51, 101145.55, 407934.54, 'Florida'],\n",
-              "       [144372.41, 118671.85, 383199.62, 'New York'],\n",
-              "       [142107.34, 91391.77, 366168.42, 'Florida'],\n",
-              "       [131876.9, 99814.71, 362861.36, 'New York'],\n",
-              "       [134615.46, 147198.87, 127716.82, 'California'],\n",
-              "       [130298.13, 145530.06, 323876.68, 'Florida'],\n",
-              "       [120542.52, 148718.95, 311613.29, 'New York'],\n",
-              "       [123334.88, 108679.17, 304981.62, 'California'],\n",
-              "       [101913.08, 110594.11, 229160.95, 'Florida'],\n",
-              "       [100671.96, 91790.61, 249744.55, 'California'],\n",
-              "       [93863.75, 127320.38, 249839.44, 'Florida'],\n",
-              "       [91992.39, 135495.07, 252664.93, 'California'],\n",
-              "       [119943.24, 156547.42, 256512.92, 'Florida'],\n",
-              "       [114523.61, 122616.84, 261776.23, 'New York'],\n",
-              "       [78013.11, 121597.55, 264346.06, 'California'],\n",
-              "       [94657.16, 145077.58, 282574.31, 'New York'],\n",
-              "       [91749.16, 114175.79, 294919.57, 'Florida'],\n",
-              "       [86419.7, 153514.11, 0.0, 'New York'],\n",
-              "       [76253.86, 113867.3, 298664.47, 'California'],\n",
-              "       [78389.47, 153773.43, 299737.29, 'New York'],\n",
-              "       [73994.56, 122782.75, 303319.26, 'Florida'],\n",
-              "       [67532.53, 105751.03, 304768.73, 'Florida'],\n",
-              "       [77044.01, 99281.34, 140574.81, 'New York'],\n",
-              "       [64664.71, 139553.16, 137962.62, 'California'],\n",
-              "       [75328.87, 144135.98, 134050.07, 'Florida'],\n",
-              "       [72107.6, 127864.55, 353183.81, 'New York'],\n",
-              "       [66051.52, 182645.56, 118148.2, 'Florida'],\n",
-              "       [65605.48, 153032.06, 107138.38, 'New York'],\n",
-              "       [61994.48, 115641.28, 91131.24, 'Florida'],\n",
-              "       [61136.38, 152701.92, 88218.23, 'New York'],\n",
-              "       [63408.86, 129219.61, 46085.25, 'California'],\n",
-              "       [55493.95, 103057.49, 214634.81, 'Florida'],\n",
-              "       [46426.07, 157693.92, 210797.67, 'California'],\n",
-              "       [46014.02, 85047.44, 205517.64, 'New York'],\n",
-              "       [28663.76, 127056.21, 201126.82, 'Florida'],\n",
-              "       [44069.95, 51283.14, 197029.42, 'California'],\n",
-              "       [20229.59, 65947.93, 185265.1, 'New York'],\n",
-              "       [38558.51, 82982.09, 174999.3, 'California'],\n",
-              "       [28754.33, 118546.05, 172795.67, 'California'],\n",
-              "       [27892.92, 84710.77, 164470.71, 'Florida'],\n",
-              "       [23640.93, 96189.63, 148001.11, 'California'],\n",
-              "       [15505.73, 127382.3, 35534.17, 'New York'],\n",
-              "       [22177.74, 154806.14, 28334.72, 'California'],\n",
-              "       [1000.23, 124153.04, 1903.93, 'New York'],\n",
-              "       [1315.46, 115816.21, 297114.46, 'Florida'],\n",
-              "       [0.0, 135426.92, 0.0, 'California'],\n",
-              "       [542.05, 51743.15, 0.0, 'New York'],\n",
-              "       [0.0, 116983.8, 45173.06, 'California']], dtype=object)"
+              "array([[165349.2, 136897.8, 471784.1, 2],\n",
+              "       [162597.7, 151377.59, 443898.53, 0],\n",
+              "       [153441.51, 101145.55, 407934.54, 1],\n",
+              "       [144372.41, 118671.85, 383199.62, 2],\n",
+              "       [142107.34, 91391.77, 366168.42, 1],\n",
+              "       [131876.9, 99814.71, 362861.36, 2],\n",
+              "       [134615.46, 147198.87, 127716.82, 0],\n",
+              "       [130298.13, 145530.06, 323876.68, 1],\n",
+              "       [120542.52, 148718.95, 311613.29, 2],\n",
+              "       [123334.88, 108679.17, 304981.62, 0],\n",
+              "       [101913.08, 110594.11, 229160.95, 1],\n",
+              "       [100671.96, 91790.61, 249744.55, 0],\n",
+              "       [93863.75, 127320.38, 249839.44, 1],\n",
+              "       [91992.39, 135495.07, 252664.93, 0],\n",
+              "       [119943.24, 156547.42, 256512.92, 1],\n",
+              "       [114523.61, 122616.84, 261776.23, 2],\n",
+              "       [78013.11, 121597.55, 264346.06, 0],\n",
+              "       [94657.16, 145077.58, 282574.31, 2],\n",
+              "       [91749.16, 114175.79, 294919.57, 1],\n",
+              "       [86419.7, 153514.11, 0.0, 2],\n",
+              "       [76253.86, 113867.3, 298664.47, 0],\n",
+              "       [78389.47, 153773.43, 299737.29, 2],\n",
+              "       [73994.56, 122782.75, 303319.26, 1],\n",
+              "       [67532.53, 105751.03, 304768.73, 1],\n",
+              "       [77044.01, 99281.34, 140574.81, 2],\n",
+              "       [64664.71, 139553.16, 137962.62, 0],\n",
+              "       [75328.87, 144135.98, 134050.07, 1],\n",
+              "       [72107.6, 127864.55, 353183.81, 2],\n",
+              "       [66051.52, 182645.56, 118148.2, 1],\n",
+              "       [65605.48, 153032.06, 107138.38, 2],\n",
+              "       [61994.48, 115641.28, 91131.24, 1],\n",
+              "       [61136.38, 152701.92, 88218.23, 2],\n",
+              "       [63408.86, 129219.61, 46085.25, 0],\n",
+              "       [55493.95, 103057.49, 214634.81, 1],\n",
+              "       [46426.07, 157693.92, 210797.67, 0],\n",
+              "       [46014.02, 85047.44, 205517.64, 2],\n",
+              "       [28663.76, 127056.21, 201126.82, 1],\n",
+              "       [44069.95, 51283.14, 197029.42, 0],\n",
+              "       [20229.59, 65947.93, 185265.1, 2],\n",
+              "       [38558.51, 82982.09, 174999.3, 0],\n",
+              "       [28754.33, 118546.05, 172795.67, 0],\n",
+              "       [27892.92, 84710.77, 164470.71, 1],\n",
+              "       [23640.93, 96189.63, 148001.11, 0],\n",
+              "       [15505.73, 127382.3, 35534.17, 2],\n",
+              "       [22177.74, 154806.14, 28334.72, 0],\n",
+              "       [1000.23, 124153.04, 1903.93, 2],\n",
+              "       [1315.46, 115816.21, 297114.46, 1],\n",
+              "       [0.0, 135426.92, 0.0, 0],\n",
+              "       [542.05, 51743.15, 0.0, 2],\n",
+              "       [0.0, 116983.8, 45173.06, 0]], dtype=object)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 40
+          "execution_count": 42
         }
       ]
     },
