--- a/Regresión/Regresion_Lineal_Multiple.ipynb
+++ b/Regresión/Regresion_Lineal_Multiple.ipynb
@@ -51,7 +51,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -73,13 +73,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 122
         },
-        "outputId": "0de2d7ac-c6c8-43bf-dbb9-147a0efd78c9"
+        "outputId": "cb44c653-2e90-4811-8cf9-d01c629f9e86"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,7 +116,7 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,4].values"
       ],
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -159,7 +159,7 @@
         "### remainder='passthrough'. deja el resto de las columnas en pié\n",
         "x=np.array(ct.fit_transform(x),dtype=np.int)"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -195,7 +195,7 @@
       "source": [
         "x = x[:,1:]"
       ],
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -226,7 +226,7 @@
         "#x_train = sc_x.fit.transform(x_train)\n",
         "#x_test = sc_x.fit.transform(x_test)"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -258,14 +258,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "9523d85b-f8d0-4f1c-83b2-ea2053a7a681"
+        "outputId": "794cc2b5-b5a2-4a37-d493-0370d479eb55"
       },
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
         "regresion = LinearRegression()\n",
         "regresion.fit(x_train,y_train)"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -277,7 +277,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 10
         }
       ]
     },
@@ -301,7 +301,7 @@
       "source": [
         "y_pred = regresion.predict(x_test)"
       ],
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -317,29 +317,139 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NLcew6kwZg9K",
+        "id": "-Fop7LTrmRhF",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 562
+        },
+        "outputId": "bda04fbb-5a6b-4ca9-a013-4080f394b0c7"
       },
       "source": [
-        "import statsmodels.formula.api as sm\n",
-        "x = np.append(arr= np.ones((50,1)).astype(int), values= x, axis=1)"
+        "import statsmodels.api as sm\n",
+        "x = np.append(arr = np.ones((50,1)).astype(int), values=x, axis=1)\n",
+        "sl= 0.05\n",
+        "x_opt = x[:,[0,1,2,3,4,5]]\n",
+        "regresion_OLS = sm.OLS (endog=y,exog=x_opt).fit()\n",
+        "regresion_OLS.summary()"
       ],
       "execution_count": 14,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "NZ6JB4BBergn",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "pd.DataFrame(x)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<table class=\"simpletable\">\n",
+              "<caption>OLS Regression Results</caption>\n",
+              "<tr>\n",
+              "  <th>Dep. Variable:</th>            <td>y</td>        <th>  R-squared:         </th> <td>   0.947</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.943</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   272.4</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Date:</th>             <td>Mon, 07 Sep 2020</td> <th>  Prob (F-statistic):</th> <td>2.76e-29</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Time:</th>                 <td>23:05:07</td>     <th>  Log-Likelihood:    </th> <td> -527.35</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>No. Observations:</th>      <td>    50</td>      <th>  AIC:               </th> <td>   1063.</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Df Residuals:</th>          <td>    46</td>      <th>  BIC:               </th> <td>   1070.</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Df Model:</th>              <td>     3</td>      <th>                     </th>     <td> </td>   \n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>   \n",
+              "</tr>\n",
+              "</table>\n",
+              "<table class=\"simpletable\">\n",
+              "<tr>\n",
+              "    <td></td>       <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>const</th> <td> 1.625e+04</td> <td> 1013.375</td> <td>   16.036</td> <td> 0.000</td> <td> 1.42e+04</td> <td> 1.83e+04</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>x1</th>    <td> 1.625e+04</td> <td> 1013.375</td> <td>   16.036</td> <td> 0.000</td> <td> 1.42e+04</td> <td> 1.83e+04</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>x2</th>    <td> 1.625e+04</td> <td> 1013.375</td> <td>   16.036</td> <td> 0.000</td> <td> 1.42e+04</td> <td> 1.83e+04</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>x3</th>    <td> 1163.8311</td> <td> 3379.787</td> <td>    0.344</td> <td> 0.732</td> <td>-5639.326</td> <td> 7966.988</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>x4</th>    <td>    9.4757</td> <td> 3312.064</td> <td>    0.003</td> <td> 0.998</td> <td>-6657.364</td> <td> 6676.316</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>x5</th>    <td>    0.8530</td> <td>    0.030</td> <td>   28.226</td> <td> 0.000</td> <td>    0.792</td> <td>    0.914</td>\n",
+              "</tr>\n",
+              "</table>\n",
+              "<table class=\"simpletable\">\n",
+              "<tr>\n",
+              "  <th>Omnibus:</th>       <td>13.419</td> <th>  Durbin-Watson:     </th> <td>   1.122</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Prob(Omnibus):</th> <td> 0.001</td> <th>  Jarque-Bera (JB):  </th> <td>  17.607</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Skew:</th>          <td>-0.907</td> <th>  Prob(JB):          </th> <td>0.000150</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Kurtosis:</th>      <td> 5.271</td> <th>  Cond. No.          </th> <td>3.95e+21</td>\n",
+              "</tr>\n",
+              "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The smallest eigenvalue is 2.4e-32. This might indicate that there are<br/>strong multicollinearity problems or that the design matrix is singular."
+            ],
+            "text/plain": [
+              "<class 'statsmodels.iolib.summary.Summary'>\n",
+              "\"\"\"\n",
+              "                            OLS Regression Results                            \n",
+              "==============================================================================\n",
+              "Dep. Variable:                      y   R-squared:                       0.947\n",
+              "Model:                            OLS   Adj. R-squared:                  0.943\n",
+              "Method:                 Least Squares   F-statistic:                     272.4\n",
+              "Date:                Mon, 07 Sep 2020   Prob (F-statistic):           2.76e-29\n",
+              "Time:                        23:05:07   Log-Likelihood:                -527.35\n",
+              "No. Observations:                  50   AIC:                             1063.\n",
+              "Df Residuals:                      46   BIC:                             1070.\n",
+              "Df Model:                           3                                         \n",
+              "Covariance Type:            nonrobust                                         \n",
+              "==============================================================================\n",
+              "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+              "------------------------------------------------------------------------------\n",
+              "const       1.625e+04   1013.375     16.036      0.000    1.42e+04    1.83e+04\n",
+              "x1          1.625e+04   1013.375     16.036      0.000    1.42e+04    1.83e+04\n",
+              "x2          1.625e+04   1013.375     16.036      0.000    1.42e+04    1.83e+04\n",
+              "x3          1163.8311   3379.787      0.344      0.732   -5639.326    7966.988\n",
+              "x4             9.4757   3312.064      0.003      0.998   -6657.364    6676.316\n",
+              "x5             0.8530      0.030     28.226      0.000       0.792       0.914\n",
+              "==============================================================================\n",
+              "Omnibus:                       13.419   Durbin-Watson:                   1.122\n",
+              "Prob(Omnibus):                  0.001   Jarque-Bera (JB):               17.607\n",
+              "Skew:                          -0.907   Prob(JB):                     0.000150\n",
+              "Kurtosis:                       5.271   Cond. No.                     3.95e+21\n",
+              "==============================================================================\n",
+              "\n",
+              "Warnings:\n",
+              "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+              "[2] The smallest eigenvalue is 2.4e-32. This might indicate that there are\n",
+              "strong multicollinearity problems or that the design matrix is singular.\n",
+              "\"\"\""
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
     }
   ]
 }
